# numpy-groupies

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  accumarray.py  accumarray_numpy.py  accumarray_numpy_ufunc.py  accumarray_pandas.py  accumarray_purepy.py  accumarray_utils.py  accumarray_weave.py  conftest.py  diagram.docx  pyproject.toml  setup.cfg  setup.py  test_accumarray.py  test_and_bench_simple.py
.github/workflows/: cancel-duplicate-runs.yaml  ci.yaml  pypi-release.yaml
aggregate/: __init__.py  aggregate_numba.py  aggregate_numpy.py  aggregate_numpy_ufunc.py  aggregate_pandas.py  aggregate_purepy.py  aggregate_weave.py  misc_tools.py  utils.py  utils_numpy.py
aggregate/tests/: bench_simple.py  test_compare.py  test_generic.py  test_numpy.py  test_ufunc.py  test_unpack.py  test_weave.py
benchmarks/: generic.py  simple.py
ci/: environment.yml
diagrams/: diagram.docx
miscellaneous/: misc_tools.py
numpy-groupies/: aggregate_numba.py
numpy_groupies/: __init__.py  _version.py  aggregate_numba.py  aggregate_numpy.py  aggregate_numpy_ufunc.py  aggregate_pandas.py  aggregate_polars.py  aggregate_purepy.py  aggregate_weave.py  misc_tools_numpy.py  utils.py  utils_numpy.py
numpy_groupies/benchmarks/: generic.py  simple.py
numpy_groupies/tests/: __init__.py  test_compare.py  test_generic.py  test_indices.py  test_unpack.py  test_utils.py
