[metadata]
description-file = README.md

[aliases]
test=pytest

[versioneer]
VCS = git
style = pep440
versionfile_source = numpy_groupies/_version.py
versionfile_build = numpy_groupies/_version.py
tag_prefix = v

[pep8]
max_line_length = 120
aggressive = 1

[isort]
line_length = 100
combine_as_imports = true
multi_line_output = 0
skip_gitignore = true
default_section = THIRDPARTY
known_first_party = numpy_groupies
